--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "15.0.1",
     "pullstate": "^1.25.0",
     "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "eslint": "^8",
