--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "nanoid": "^5.0.7",
     "next": "15.0.1",
     "pullstate": "^1.25.0",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
