--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@faker-js/faker": "^9.1.0",
     "@fontsource/open-sans": "^5.1.0",
     "@tailwindcss/forms": "^0.5.9",
+    "formik": "^2.4.6",
     "nanoid": "^5.0.7",
     "next": "15.0.1",
     "pullstate": "^1.25.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
